# ITURBO

./: CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
ITURBO/Core/: Assert.h  Config.h  Enums.h  Error.h  Exception.h  Export.h  Types.h  Version.h.in
ITURBO/Mesh/: CMakeLists.txt  Cell.h  Export.h  Face.h  FaceGeometry.h  Mesh.h  Node.h  Volume.h
docs/: building.md
scripts/: extract_repo_structure.py  repo_to_single_file.py
src/: CMakeLists.txt
src/BC/: CMakeLists.txt
src/Core/: CMakeLists.txt  Error.cpp
src/Mesh/: CMakeLists.txt
test/: CMakeLists.txt
